# ayin

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/ayin/: __init__.py  config.py  db.py  demo.py
backend/ayin/analytics/: __init__.py  events.py  funnel.py  report.py
backend/ayin/api/: deps.py  main.py  schemas.py
backend/ayin/auth/: __init__.py  passwords.py  tokens.py  verification.py
backend/ayin/beta/: __init__.py  gonogo.py  invites.py
backend/ayin/connectors/: __init__.py  base.py  bootstrap.py  breach.py  fake.py  registry.py  websearch.py
backend/ayin/consent/: __init__.py  flow.py  store.py
backend/ayin/llm/: __init__.py  citation_guard.py  client.py  cost.py  er_assist.py  narrative.py  planner.py  prompts.py  remediation.py  schemas.py
backend/ayin/models/: __init__.py  abuse.py  analytics.py  audit.py  base.py  consent.py  enums.py  exclusion.py  finding.py  intent.py  (+12 more)
backend/migrations/: env.py
backend/scripts/: demo_server.py  llm_smoke.py  seed_demo.py
backend/tests/: conftest.py  test_abuse.py  test_account.py  test_analytics.py  test_audit.py  test_auth.py  test_breach_connector.py  test_broker_connector.py  test_checklist.py  test_citation_guard.py  test_connectors.py  test_consent_api.py  test_consent_flow.py  test_consent_gate.py  test_deploy_hardening.py  test_er_assist.py  test_exclusion.py  test_gonogo.py  test_health.py  test_identifiers.py  test_intent.py  test_invites.py  test_jurisdiction.py  test_limits.py  test_llm_client.py  test_llm_remediation.py  test_llm_schemas.py  test_models.py  test_orchestrator.py  test_pivot.py  test_preview.py  test_qa_harness.py  test_report_narrative.py  test_resolution.py  test_scan_activity.py  test_scan_planner.py  test_scans_api.py  test_scoring.py  test_tos.py  test_vault.py  (+1 more)
backend/tools/: __init__.py  sherlock_import.py
(+168 files in other folders)
